Minor improvements
Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>